--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -12,16 +12,17 @@
       <a href="#" class="item active"><strong>Projetos</strong></a>
       <%= link_to "Novo", new_project_path, class: 'item' %>
     </div>
+    <% end %>
 <% if @projects.empty? %> 
   <div class="box_center">
-      <%= image_tag("project-management.png") %>
+      <%= image_tag("project.png") %>
       <br />
       <br />
       <p class="access_deny"> Nenhum projeto criado. Clique em "Novo" para iniciar um projeto. </p>
   </div>
-<% end %>
+<% else %>
     <%= render 'projects/list_projects_admin' %>
-  <% end %>
+<% end %>
 
 
 
