--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="ui container">
   <!-- NAVBAR -->
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Projetos</strong></a>
     <%= link_to "Voltar", projects_path, class: 'item' %>
     <%= link_to "Editar", edit_project_path(@project), class: 'item' %>
