--- a/app/views/user_stories/_breadcrumb.html.erb
+++ b/app/views/user_stories/_breadcrumb.html.erb
@@ -6,6 +6,6 @@
   <%= link_to current_project.name, project_path(current_project), class: 'section' %>
   <div class="divider"> / </div>
 
-  <div class="section">Product backlog</div>
+  <div class="section"><b>Product backlog</b></div>
 </div>
 <!-- /BREADCRUMB -->
