--- a/app/views/projects/_list_projects_default.html.erb
+++ b/app/views/projects/_list_projects_default.html.erb
@@ -1,15 +1,7 @@
 
-<br />
-<br />
-<% if @projects.empty? %> 
-  <div class="box_center">
-      <%= image_tag("access-denied.png") %>
-      <br />
-      <br />
-      <p class="access_deny"> Você não tem acesso a nenhum projeto. Informe ao Product Owner ou Administrador. </p>
-  </div>
-<% else %>
 
+<br />
+<br />
 <div class="ui four cards">
 
 <% @projects.each do |project| %>
@@ -37,11 +29,10 @@
     </div>
    
     <button class="ui bottom attached button" onclick="window.location.href='<%= scrumboard_path(project) %>'">
-      <i class="grid layout icon"></i>
-      Scrumboard
+      Acessar Board
     </button>
   </div>
-<% end %>
+
 <% end %>
 </div>
 
