--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,29 +1,31 @@
+
+
 <p></p>
 
 <div class="ui container">
 
   <% if current_user.group != 'admin' %>
-    <h1>Projetos <%= image_tag("gerenciamento-de-projetos.png")%></h1>
+    <h1>Projetos <%= image_tag("gerenciamento-de-projetos.png") %></h1>
     <hr>
     <p></p>
+
+    <% if @projects.empty? %> 
+  <div class="box_center">
+      <%= image_tag("access-denied.png") %>
+      <br />
+      <br />
+      <p class="access_deny">Nenhum projeto criado. Clique em "Novo" para iniciar um projeto.</p>
+    </div>
+  </div>
+<% end %>
     <%= render 'projects/list_projects_default' %>
   <% else %>
-    <div class="ui menu">
+    <div class="ui menu"">
       <a href="#" class="item active"><strong>Projetos</strong></a>
       <%= link_to "Novo", new_project_path, class: 'item' %>
     </div>
-    <% end %>
-<% if @projects.empty? %> 
-  <div class="box_center">
-      <%= image_tag("project.png") %>
-      <br />
-      <br />
-      <p class="access_deny"> Nenhum projeto criado. Clique em "Novo" para iniciar um projeto. </p>
-  </div>
-<% else %>
+
     <%= render 'projects/list_projects_admin' %>
-<% end %>
-
-
+  <% end %>
 
 </div>
