--- a/app/views/projects/scrumboard.html.erb
+++ b/app/views/projects/scrumboard.html.erb
@@ -1,10 +1,9 @@
   
-<h1>Scrumboard</h1>
-
+<h1>Board <%= image_tag("scrumboard-icon.png")%></h1>
 
 <div class="ui top attached tabular menu">
   <% @project.sprints.each_with_index do |sprint, i| %>
-    <a class="item <%= 'active' if i == 0 %>" data-tab="tab-<%= sprint.id %>"><%= sprint.name %></a>
+    <a class="item <%= 'active' if i == 0 %>" data-tab="tab-<%= sprint.id %>">Sprint: <%= sprint.name %></a>
   <% end %>
 </div>
 
@@ -70,36 +69,49 @@
             <p></p>
             <!-- CARD -->
             <div class="ui orange card">
-              <div class="content">
+              <div class="content">           
                 <div class="meta">
-                            <h3><span class="category"><%= @project.initial %><%= task.id %> - <%= task.title %></span></h3>
+                  <h3><span class="category">TK-<%= @project.initial %>-<%= task.id %>  <%= task.title %></span></h3>
                 </div>
                 <div class="description">
-                  <% if task.abilities.count > 0 %>
                   <p>
-                    <strong>
-                      <i class="gift icon"></i>
-                      Recompensa(s):
-                    </strong><br>
-                    <%= us.story_points %> pontos de XP na(s) Skill(s):
-                    <% task.abilities.each do |a| %>
-                      <br> - <%= a.name %>
-                    <% end %>
-                  </p>
-                  <% end %>
+                        <a href="#" data-modal="usertory-<%= us.id %>" class="ui  mini button modal-task">
+                          Detalhes
+                        </a>
 
-                  <p>
-                    <a href="#" data-modal="usertory-<%= us.id %>" class="ui  mini button modal-task">
-                      Detalhes
-                    </a>
-
-                    <%= link_to take_task_path(task.id), class: 'ui  mini teal button' do %>
-                      Fazer
-                    <% end %>
+                        <%= link_to take_task_path(task.id), class: 'ui  mini teal button' do %>
+                          Atribuir
+                        <% end %>
                   </p>
 
+                  <p>
+                  Criada em: <%= l task.created_at%>
+                 <% if task.priority_id == 1 %>
+                    <div class="ui compact mini icon red basic button">
+                    <b>Prioridade: </b>
+                     Alta
+                    </div>
+                 <% end %>
+
+                 <% if task.priority_id == 2 %>
+                    <div class="ui compact mini silver icon orange basic button ">
+                        <b>Prioridade: </b>
+                          Média
+                    </div>
+                 <% end %>
+
+                  <% if task.priority_id == 3 %>
+                    <div class="ui compact mini icon green basic button ">
+                        <b>Prioridade: </b>
+                        Baixa
+                    </div>
+                 <% end %>
+                  </p>
+                     
                 </div>
+
               </div>
+               
               <div class="extra content">
                 <div class="right floated author">
                   <% task.users.each do |u| %>
@@ -114,50 +126,64 @@
         </td>
 
         <td class="top aligned">
-          <% sprint.user_stories.each do |us| %>
-
+          <% sprint.user_stories.each do |us| %>       
           <% us.tasks.where(status: 2).each do |task| %>
             <p></p>
             <!-- CARD -->
             <div class="ui teal card">
               <div class="content">
                 <div class="meta">
-                  <h3><span class="category"><%= @project.initial %><%= task.id %> - <%= task.title %></span></h3>
+                  <h3><span class="category">TK-<%= @project.initial %>-<%= task.id %>  <%= task.title %></span></h3>
                 </div>
-                <div class="description">
-                  <% if task.abilities.count > 0 %>
-                  <p>
-                    <strong>
-                      <i class="gift icon"></i>
-                      Recompensa(s):
-                    </strong><br>
-                    <%= us.story_points %> pontos de XP na(s) Skill(s):
-                    <% task.abilities.each do |a| %>
-                      <br>- <%= a.name %>
-                    <% end %>
-                  </p>
-                  <% end %>
-
-                  <div class="ui  mini icon buttons">
-                    <a href="#" data-modal="usertory-<%= us.id %>" class="ui  mini icon button modal-task" title="Detalhes">
-                      <i class="search icon"></i>
+                 <div class="description">
+                  <div class="ui mini icon buttons">
+                  
+                    <a href="#" data-modal="usertory-<%= us.id %>" class="ui mini icon button modal-task" title="Detalhes">
+                    <%= image_tag("info.png") %>
                     </a>
-
-                    <%= link_to get_out_task_path(task.id), class: 'ui  mini orange button' do %>
+                 
+                    <%= link_to get_out_task_path(task.id), class: 'ui mini yellow button', title: 'Voltar para a coluna pendente' do %>
                       Sair
                     <% end %>
 
-                    <%= link_to take_task_path(task.id), class: 'ui  mini teal button' do %>
+                    <%= link_to take_task_path(task.id), class: 'ui mini orange button', title: 'Participar da tarefa' do %>
                       Ajudar
                     <% end %>
 
-                    <%= link_to send_to_code_review_path(task.id), class: 'ui  mini blue button', title: 'Enviar para teste' do %>
+                    <%= link_to send_to_code_review_path(task.id), class: 'ui mini teal button', title: 'Enviar para Code Review' do %>
                       Code Review
                     <% end %>
+                 
                   </div>
 
-                </div>
-              </div>
+                
+                  <p>
+                  <br />
+                      Criada em: <%= l task.created_at%>
+                      <% if task.priority_id == 1 %>
+                         <div class="ui compact mini icon red basic button">
+                         <b>Prioridade: </b>
+                          Alta
+                         </div>
+                      <% end %>
+
+                      <% if task.priority_id == 2 %>
+                         <div class="ui compact mini silver icon orange basic button ">
+                             <b>Prioridade: </b>
+                               Média
+                         </div>
+                      <% end %>
+
+                      <% if task.priority_id == 3 %>
+                        <div class="ui compact mini icon green basic button ">
+                            <b>Prioridade: </b>
+                            Baixa
+                        </div>
+                      <% end %>
+                  </p>   
+             </div>
+              
+              
               <div class="extra content">
                 <div class="right floated author">
                   <% task.users.each do |u| %>
@@ -173,52 +199,56 @@
 
         <td class="top aligned">
           <% sprint.user_stories.each do |us| %>
-          
-          <%# render partial: 'projects/modal_tasks', locals: {us: us} %>
-
           <% us.tasks.where(status: 3).each do |task| %>
             <p></p>
             <!-- CARD -->
-            <div class="ui blue card">
+            <div class="ui teal card">
               <div class="content">
-                
                 <div class="meta">
-                            <h3><span class="category"><%= @project.initial %><%= task.id %> - <%= task.title %></span></h3>
+                  <h3><span class="category">TK-<%= @project.initial %>-<%= task.id %>  <%= task.title %></span></h3>
                 </div>
+
                 <div class="description">
-                  <% if task.abilities.count > 0 %>
-                  <p>
-                    <strong>
-                      <i class="gift icon"></i>
-                      Recompensa(s):
-                    </strong><br>
-                    <%= us.story_points %> pontos de XP na(s) Skill(s):
-                    <% task.abilities.each do |a| %>
-                      <br>- <%= a.name %>
-                    <% end %>
-                  </p>
-                  <% end %>
-
-                  <div class="ui  mini icon buttons">
-                    <a href="#" data-modal="usertory-<%= us.id %>" class="ui  mini icon button modal-task" title="Detalhes">
-                      <i class="search icon"></i>
-                    </a>
-
-                    <%= link_to get_out_task_path(task.id), class: 'ui  mini orange button' do %>
-                      Pendente
-                    <% end %>
-
-                    <%= link_to take_task_path(task.id), class: 'ui  mini red button' do %>
-                      Desenvolvimento
-                    <% end %>
-
-                    <%= link_to  send_task_to_test_path(task.id), class: 'ui  mini green button' do %>
-                      QA
-                    <% end %>
+                  <div class="ui mini icon buttons">
+                        <a href="#" data-modal="usertory-<%= us.id %>" class="ui mini icon button modal-task" title="Detalhes">
+                          <%= image_tag("info.png") %></a>
+                        <%= link_to get_out_task_path(task.id), class: 'ui mini orange button' do %>
+                          Pendente
+                        <% end %>
+                        <%= link_to take_task_path(task.id), class: 'ui mini red button' do %>
+                          Desenvolvimento
+                        <% end %>
+                        <%= link_to send_task_to_test_path(task.id), class: 'ui mini green button' do %>
+                          QA
+                        <% end %>
                   </div>
+  
+                  <p>
+                  <br />
+                     Criada em: <%= l task.created_at%>
+                    <% if task.priority_id == 1 %>
+                       <div class="ui compact mini icon red basic button">
+                       <b>Prioridade: </b>
+                        Alta
+                       </div>
+                    <% end %>
 
-                </div>
-              </div>
+                    <% if task.priority_id == 2 %>
+                       <div class="ui compact mini silver icon orange basic button ">
+                           <b>Prioridade: </b>
+                             Média
+                       </div>
+                    <% end %>
+
+                     <% if task.priority_id == 3 %>
+                       <div class="ui compact mini icon green basic button ">
+                           <b>Prioridade: </b>
+                           Baixa
+                       </div>
+                    <% end %>
+                 </p>
+               </div>
+ 
               <div class="extra content">
                 <div class="right floated author">
                   <% task.users.each do |u| %>
@@ -235,35 +265,21 @@
 
          <td class="top aligned">
           <% sprint.user_stories.each do |us| %>
-          
-          <%# render partial: 'projects/modal_tasks', locals: {us: us} %>
+      
 
           <% us.tasks.where(status: 4).each do |task| %>
             <p></p>
             <!-- CARD -->
             <div class="ui blue card">
               <div class="content">
-                
                 <div class="meta">
-                  <h3><span class="category"><%= @project.initial %><%= task.id %> - <%= task.title %></span></h3>
+                  <h3><span class="category">TK-<%= @project.initial %>-<%= task.id %>  <%= task.title %></span></h3>
                 </div>
                 <div class="description">
-                  <% if task.abilities.count > 0 %>
-                  <p>
-                    <strong>
-                      <i class="gift icon"></i>
-                      Recompensa(s):
-                    </strong><br>
-                    <%= us.story_points %> pontos de XP na(s) Skill(s):
-                    <% task.abilities.each do |a| %>
-                      <br>- <%= a.name %>
-                    <% end %>
-                  </p>
-                  <% end %>
-
-                  <div class="ui  mini icon buttons">
+          
+                  <div class="ui mini icon buttons">
                     <a href="#" data-modal="usertory-<%= us.id %>" class="ui mini icon button modal-task" title="Detalhes">
-                      <i class="search icon"></i>
+                      <%= image_tag("info.png") %>
                     </a>
 
                     <%= link_to get_out_task_path(task.id), class: 'ui mini orange button' do %>
@@ -308,27 +324,13 @@
               <div class="content">
                 
                 <div class="meta">
-                   <h3><span class="category"><%= @project.initial %><%= task.id %> - <%= task.title %></span></h3>
+                  <h3><span class="category">TK-<%= @project.initial %>-<%= task.id %>  <%= task.title %></span></h3>
                 </div>
                 <div class="description">
-                  <% if task.abilities.count > 0 %>
-                  <p>
-                    <strong>
-                      <i class="gift icon"></i>
-                      Recompensa(s):
-                    </strong><br>
-                    <%= us.story_points %> pontos de XP na(s) Skill(s):
-                    <% task.abilities.each do |a| %>
-                      <br>- <%= a.name %>
-                    <% end %>
-                  </p>
-                  <% end %>
-
-                  <div class="ui  mini icon buttons">
+                  <div class="ui mini icon buttons">
                     <a href="#" data-modal="usertory-<%= us.id %>" class="ui  mini icon button modal-task" title="Detalhes">
-                      <i class="search icon"></i>
+                      <%= image_tag("info.png") %>
                     </a>
-
                     <%= link_to redo_task_path(task.id), class: 'ui  mini teal button', title: 'Enviar para teste' do %>
                       Refazer
                     <% end %>
