--- a/app/views/user_stories/_form.html.erb
+++ b/app/views/user_stories/_form.html.erb
@@ -42,8 +42,12 @@
     <div class="inline field">
       <%= f.label :Sprint %>
       <br />
-      <% sprints = current_project.themes.map {|sprint| [sprint.name, sprint.id] }; sprints << ["Selecione um tema", ""] %>
-      <%= f.collection_select(:sprint_id, Sprint.all, :id, :name, {:prompt => 'Sprint'}, {class: 'ui search dropdown', placeholder: 'Sprint'} ) %>
+      <% sprints = current_project.sprints {|sprint| [sprint.name, sprint.id] };  %>
+
+      <%= f.collection_select( :sprint_id, sprints, :id, :name, {:prompt => 'Sprint'}, {class: 'ui search dropdown', placeholder: 'Sprint'} ) %>
+
+     
+ 
     </div>  
     <div class="inline field">
       <%= f.label :Status %>
