Deletar arquivos antigos

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,7 +6,7 @@
     <a href="#" class="item active"><strong>Projetos</strong></a>
     <%= link_to "Voltar", projects_path, class: 'item' %>
     <%= link_to "Editar", edit_project_path(@project), class: 'item' %>
-    <%= link_to 'Excluír', @project, method: :delete, data: { confirm: 'Você tem certeza?' }, class: 'item' %>
+    <%= link_to 'Excluír', @project, method: :delete, data: { confirm: "Deseja deletar o projeto '#{ @project.name }'? Se sim você vai perder todos os dados de backlog, sprint, release e usuários associados a ele." }, class: 'item' %>
   </div>
   <!-- /NAVBAR -->
 
