Ajustes de imagens

--- a/app/views/function_user_projects/index.html.erb
+++ b/app/views/function_user_projects/index.html.erb
@@ -1,7 +1,7 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Membros</strong></a>
     <%= link_to "Novo", new_function_user_project_path, class: 'item' %>
   </div>
