--- a/app/views/function_user_projects/show.html.erb
+++ b/app/views/function_user_projects/show.html.erb
@@ -9,11 +9,11 @@
   </div>
 
     <p>
-    <strong>User:</strong>
+    <strong>Usuário:</strong>
     <%= @function_user_project.user.name %>
   </p>
     <p>
-    <strong>Function:</strong>
+    <strong>Função:</strong>
     <%= @function_user_project.function.name %>
   </p>
   
