--- a/app/views/layouts/_user_side_bar.html.erb
+++ b/app/views/layouts/_user_side_bar.html.erb
@@ -5,15 +5,15 @@
     Projetos
     <% end %>
 
-    <%= link_to ranks_path do %>
+    <%= link_to projects_path do %>
      Backlog
     <% end %>
 
-   <%= link_to ranks_path do %>
+   <%= link_to projects_path do %>
      Repositório
    <% end %>
 
-   <%= link_to ranks_path do %>
+   <%= link_to projects_path do %>
      Equipe
    <% end %>
 </div>
