--- a/app/views/notifications/_take_xp.html.erb
+++ b/app/views/notifications/_take_xp.html.erb
@@ -1,10 +1,8 @@
 <h2>
   <i class="gift icon"></i>
-  Você ganhou <%= notification.target.user_story.story_points %> pontos de XP
+  Você concluiu a tarefa e ganhou <%= notification.target.user_story.story_points %> pontos de XP
 </h2>
 <p>
   Nas habilidades:
-  <% notification.target.abilities.each do |skill| %>
-    <br> - <%= skill.name %>
-  <% end %>
+
 </p>
