--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,34 +1,28 @@
-<div class="ui container">
-  <h1>Configurações</h1>
+
+  <h1>Configurações <%= image_tag("configuracao.png") %> </h1>
   <hr>
-
-  <div class="ui four cards">
+ <div class="ui four cards">
     <div class="card">
-      <div class="content">
-        <div class="header">Funções</div>
-        <div class="description">
-          Configure aqui papéis desempenhados pelos membros da equipe nos projetos.
-        </div>
-      </div>
-
       <button class="ui bottom attached button" onclick="window.location.href='<%= functions_path %>'">
-        Gerenciar
-      </button>
-    </div>
-
-
-    <div class="card">
-      <div class="content">
-        <div class="header">Temas</div>
+        <%= image_tag("team_configuration.png") %>
         <div class="description">
-          Configure aqui os temas das user stories dos projetos
+          Configure aqui a posição de cada membro no projeto.
+           <p></p>
+           <p></p>
         </div>
-      </div>
-
-      <button class="ui bottom attached button" onclick="window.location.href='<%= themes_path %>'"> 
-        Gerenciar
       </button>
-    </div>
+   </div>
 
+  <div class="card">   
+      <button class="ui bottom attached button" onclick="window.location.href='<%= themes_path %>'"> 
+         <%= image_tag("tema.png") %>
+         <div class="description">
+            Configure aqui os temas das user stories dos projetos
+            <p></p>
+            <p></p>
+         </div>
+    </button>
   </div>
+
+
 </div>
