--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,9 +1,10 @@
 <div class="container">
-  <div class="ui  teal basic button">TK-<%= @task.user_story.project.initial %>-<%= @task.id %> </div>
   <br >
   <br >
-  <div class="row">
+  <div class="row"><h3>
     <%= form_for(@task) do |f| %>
+      
+      <!--
       <% if @task.errors.any? %>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="alert alert-danger">
@@ -17,8 +18,8 @@
           </div>
         </div>
       <% end %>
+      -->
     <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6">
-        
               <div class="form-group">
                 <%= f.label :title, class: 'p' %>
                 <br />
@@ -43,10 +44,11 @@
                 <br />
                 <%= f.label :user_story_id, class: 'p' %>
                 <br />
-                <%= f.collection_select(:user_story_id,current_project.user_stories,:id,:title, {:prompt=>false},{class:'field_input'}) %>
+                <%= f.collection_select(:user_story_id, current_project.user_stories, :id, :title, {:prompt=>false},{class:'field_input'}) %>
+
               </div>
         
-              <div class="form-group">
+            <div class="form-group">
                 <br />
                 <%= f.label :kind_id, class: 'p' %>
                 <br />
