--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,10 +1,23 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
-    <a href="#" class="item active"><strong>Themes</strong></a>
+  <div class="ui menu">
+    <a href="#" class="item active"><strong>Tema</strong></a>
     <%= link_to "Novo", new_theme_path, class: 'item' %>
   </div>
+
+<br />
+<br />
+
+<% if @themes.empty? %> 
+  <div class="box_center">
+      <%= image_tag("tema_big.png") %>
+      <br />
+      <br />
+      <p class="access_deny">Nenhum tema criado. Clique em "Novo" para iniciar um tema.</p>
+    </div>
+  </div>
+<% else %>
 
   <table class="ui celled table">
     <thead>
@@ -30,12 +43,12 @@
               <%= link_to 'Editar', edit_theme_path(theme), class: 'ui yellow button' %>
             </div>
             <div class="ui buttons">
-              <%= link_to 'Remover', theme, method: :delete, data: { confirm: 'Você tem certeza?' }, class: 'ui red button' %>
+              <%= link_to 'Remover', theme, method: :delete, data: { confirm: 'Você tem certeza que deseja excluir esse tema ?' }, class: 'ui red button' %>
             </div>
           </td>
         </tr>
       <% end %>
     </tbody>
   </table>
-
+<% end %>
 </div>
