--- a/app/views/themes/new.html.erb
+++ b/app/views/themes/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="ui container">
   <div class="ui menu"">
-    <a href="#" class="item active"><strong>Novo theme</strong></a>
+    <a href="#" class="item active"><strong>Novo Tema</strong></a>
     <%= link_to 'Salvar', '#', class: 'item save' %>
     <%= link_to 'Cancelar', themes_path, class: 'item' %>
   </div>
