--- a/app/views/user_story_acceptance_criterions/_form.html.erb
+++ b/app/views/user_story_acceptance_criterions/_form.html.erb
@@ -2,19 +2,21 @@
   <div class="row">
     <%= form_for(@user_story_acceptance_criterion) do |f| %>
 
-      <% if @user_story_acceptance_criterion.errors.any? %>
+          <!--
+      <% if @task.errors.any? %>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="alert alert-danger">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
             <p><strong>Wops!</strong></p>
             <ul>
-            <% @user_story_acceptance_criterion.errors.full_messages.each do |message| %>
+            <% @task.errors.full_messages.each do |message| %>
               <li><%= message %></li>
             <% end %>
             </ul>
           </div>
         </div>
       <% end %>
+      -->
     <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6">
               <div class="form-group">
                 <%= f.label :description %>
