--- a/app/views/sprints/edit.html.erb
+++ b/app/views/sprints/edit.html.erb
@@ -1,7 +1,7 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Editando sprint</strong></a>
     <%= link_to 'Salvar', '#', class: 'item save' %>
     <%= link_to 'Cancelar', sprints_path, class: 'item' %>
