--- a/app/views/sprints/index.html.erb
+++ b/app/views/sprints/index.html.erb
@@ -1,10 +1,20 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Sprints</strong></a>
-    <%= link_to "Novo", new_sprint_path, class: 'item' %>
+    <%= link_to "Nova", new_sprint_path, class: 'item' %>
   </div>
+
+
+   <% if @sprints.empty? %> 
+        <div class="box_center">
+            <%= image_tag("access-denied.png") %>
+            <br />
+            <br />
+            <p class="access_deny">Nenhuma sprint ativa no momento. Clique em "Nova" para criar.</p>
+        </div>
+   <% else %> 
 
   <%= render 'sprints/breadcrumb' %>
 
@@ -59,5 +69,5 @@
       <% end %>
     </tbody>
   </table>
-
+ <% end %>
 </div>
