--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,8 @@
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Tasks</strong></a>
     <%= link_to "Nova tarefa", new_task_path, class: 'item' %>
   </div>
-
 
 <p></p> 
 <p></p>
@@ -16,69 +15,66 @@
   </div>
 <% end %>
 
-<!-- TABLE -->
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <div class="table-responsive">
-        <table class="table table-hover">
-          <thead>
-            <tr>
-                <th>Código</th>
-                <th>Título</th>
-                <th>Data criação</th>
-                <th>Status</th>
-                <th>User story</th>
-                <th style="width: 20%;">Ações</th>
-            </tr>
-          </thead>
 
-          <tbody>
-            <% @tasks.each do |task| %>
-              <tr>
-                                <td><%= task.description %></td>
-                                <td><%= task.end_date %></td>
-                                <td><%= task.start_date %></td>
-                                <td><%= task.status %></td>
-                                <td><%= task.user_story.description %></td>
-                                <td>                    
-                  <%= link_to task, class: 'btn btn-default', title: 'Exibir' do %>
-                  <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                  <% end %>
-                  <%= link_to edit_task_path(task), class: 'btn btn-default', title: 'Editar' do %>
-                  <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-                  <% end %>
-                  <%= link_to "#modal-id-#{task.id}", class: 'btn btn-default', title: 'Remover', 'data-toggle': 'modal' do %>
-                  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                  <% end %>
-                </td>
-              </tr>
-              <!-- MODAL -->
-              <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                <div class="modal fade" id="modal-id-<%= task.id %>">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Alerta!</h4>
-                      </div>
-                      <div class="modal-body">
-                        <p>Deseja realmente remover <strong><%= task.description %></strong>?</p>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                        <%= link_to 'Remover', task, method: :delete, class: 'btn btn-danger' %>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- /MODAL -->
-            <% end %>
-          </tbody>
-        </table>
-      </div>
+<% @tasks.each do |task| %>
+
+<p>
+    <div class="kind_task_accordion">
+         <% if task.kind_id == 1 %>
+           <%= image_tag('bug.png', title: "Task do tipo BUG") %>
+         <% else %>
+           <%= image_tag('clipboard-task.png', title: "Task do tipo Sub-task") %>
+         <% end %>
     </div>
+          <%= link_to edit_task_path(task.id) do %>
+             <div class="ui button"> TK-<%= task.user_story.project.initial %>-<%= task.id %> <%= task.title %></div>
+          <% end %>
+
+          <% if task.priority_id == 1 %>       
+            <div class="ui compact mini icon red basic button">
+            <b>Prioridade: </b>
+             Alta
+            </div>
+          <% end %>
+
+                 <% if task.priority_id == 2 %>
+                    <div class="ui compact mini silver icon orange basic button ">
+                        <b>Prioridade: </b>
+                          Média
+                    </div>
+                 <% end %>
+
+                  <% if task.priority_id == 3 %>
+                    <div class="ui compact mini icon green basic button ">
+                        <b>Prioridade: </b>
+                        Baixa
+                    </div>
+                 <% end %>
+
+                 <div class="ui compact mini icon silver basic button"><b>Status: </b>
+                     <% if task.status == 1 %>
+                      Pendente
+                     <% end %>
+                     <% if task.status == 2 %>
+                      Desenvolvimento
+                     <% end %>
+                     <% if task.status == 3 %>
+                      Code Review
+                     <% end %>
+                     <% if task.status == 4 %>
+                      QA
+                     <% end %>
+                     <% if task.status == 5 %>
+                      Concluída
+                     <% end %>
+                </div>
+                 
+                 <%= link_to task, method: :delete, class: "delete_task_accordion", data: { confirm: "Deseja deletar a tarefa TK-#{task.user_story.project.initial}-#{ task.id } #{task.title} ?" }, title: "Remover tarefa TK-#{task.user_story.project.initial}-#{ task.id } #{ task.title}" do %>
+                   <%= image_tag('delete_btn.png') %>
+                 <% end %>
+ <% end %>
+
+ </p>
   </div>
 </div>
 <!-- /TABLE -->
