--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,6 @@
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Tasks</strong></a>
     <%= link_to "Nova tarefa", tasks_path, class: 'item' %>
     <%= link_to "Cancelar", tasks_path, class: 'item' %>
@@ -13,3 +13,4 @@
 <!-- /NAVBAR -->
 
 <%= render 'form' %>
+
