--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,35 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="img_background">
+  <div class="logo form">
+      <%= image_tag("logo.png") %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+<div class="ui centered grid container ">
+  <div class="six wide column form_box">
+    <h4 class="box_center">Digite seu email para recuperação da senha</h4>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'ui form' }) do |f| %>
+     
+       <h4> <%= devise_error_messages! %> </h4>
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Enviar email com instruções de reset", class: 'ui teal button' %>
+        </div>
+      <% end %>
 
 <%= render "users/shared/links" %>
+
+    <p></p>
+    <p></p>
+    <p></p>
+
+ 
+  </div>
+ </div>
+</div>
+
+
+
