ajustes botões e afins

--- a/app/assets/stylesheets/semantic.css
+++ b/app/assets/stylesheets/semantic.css
@@ -870,9 +870,13 @@ input::selection {
 }
 
 /*******************************
-            States
+            message
 *******************************/
-
+.alert_notice_error {
+  padding: 2px;
+  background-color: #f44336;
+  color: white;
+}
 /*--------------
       Hover
 ---------------*/
