--- a/app/views/functions/index.html.erb
+++ b/app/views/functions/index.html.erb
@@ -2,8 +2,8 @@
 
 <div class="ui container">
   <div class="ui menu"">
-    <a href="#" class="item active"><strong>Functions</strong></a>
-    <%= link_to "Novo", new_function_path, class: 'item' %>
+    <a href="#" class="item active"><strong>Função</strong></a>
+    <%= link_to "Nova", new_function_path, class: 'item' %>
   </div>
 
   <table class="ui celled table">
