--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,7 +22,8 @@
   
     <div class="ui menu">
       <a href="#" class="item active"><strong>Projetos</strong></a>
-      <%= link_to "Novo", new_project_path, class: 'item' %>
+      
+      <%= link_to "Criar Projeto", new_project_path, class: 'ui green button' %>
     </div>
 
     <%= render 'projects/list_projects_admin' %>
