--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Olá <%= @resource.name %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Para alterar sua senha clique no link abaixo</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Alterar minha senha', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Se não foi você que solicitou a alteração ignore esse email.</p>
+<p><b>Sua senha não será alterar enquanto você não clicar no link acima e preencher os campos corretamente.</b></p>
